Switch to heroku

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@types/node": "^8.0.55",
     "coveralls": "^3.0.0",
     "deepmerge": "^2.0.1",
+    "heroku-cli": "^6.14.39",
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
     "mocha": "^4.0.1",
-    "now": "^8.4.0",
     "nyc": "^11.3.0",
     "prettier": "^1.9.1",
     "sinon": "^4.1.2",
@@ -50,7 +50,7 @@
   },
   "scripts": {
     "coveralls": "cat coverage/lcov.info | coveralls",
-    "deploy": "now --public --dotenv=.env",
+    "deploy": "git push heroku master",
     "format-all": "find {src,test} -name '*.ts' | xargs prettier --write",
     "mocha": "mocha -r ts-node/register ./test/**/*.test.ts",
     "precommit": "lint-staged && npm test",
